
V1.1.1 (UNRELEASED):

USER-VISIBLE CHANGES:
- Fix mojibake in the language list in the options menu on
  systems where UTF-8 is not the default locale.
  (Closes: #358) (qubodup)
- Fix color bleed from what was supposed to be the alpha channel
  color key in images. Noticeable with the up/down arrows in the
  scrollbars in some resolutions.
  (Closes: #356) (qubodup)

V1.1 (2025.06.04):

DEPENDENCY / BASELINE CHANGES:
- The game now requires `polib`. Previously, we had an embedded
  copy as fallback. However, it did not work with python3.11
  and has now been removed. (nthykier)
- Remove support for python2 / python2.7. New baseline is
  python3.9 (nthykier)
- Restore compatibility with pygame 1.9.4 that had a broken
  `blits` function. Thanks to onpon4 for reporting the issue
  (Closes: #293) (nthykier)
- Add guard to prevent crashing when `locale.getdefaultencoding`
  is removed in python3.15.
- Fixed crash with numpy 2. Thanks to hexagonrecursion for
  reporting the issue. (Closes: #346)
- Set minimum pygame version to 2.5.2 to avoid a known crashing
  bug in pygame 2 (up to that version). The pygame-ce fixed it
  in a release with a lower version and works as an alternative
  as well in theory.

USER-VISIBLE CHANGES:
- New feature: Quicksaves - save on `F5` (replacing "reload theme")
  and load on `F9`. Loading can only occur on the map screen.
  Note the quicksave currently do not provide feedback on success.
  (nthykier)
- The hotkey `F5` is now "quicksave" rather than "reload theme".
  (Reload theme is now `F6`). (nthykier)
- Save games are now ordered by time (most recent first) rather
  than name. This makes it easier to find the latest savegame.
  (nthykier)
- There is now an "Auto-build items" button in the base overview.
  It will propose building all the highest value items in each
  empty base slot (provided there is anything buildable for
  that base). (nthykier)
- The cheat menu can now show data about events that is or can